Code tidyup